# pyScoMotif

./: .gitignore  .pypirc  CHANGELOG.md  README.md  TODO.md  mypy.ini  pyproject.toml
src/pyscomotif/: RMSD_calculation.py  __init__.py  constants.py  data_containers.py  index_folders_and_files.py  indexing.py  motif_search.py  motif_search_with_ShareableList.py  pyscomotif.py  residue_data_dicts.py  utils.py
